konami code easter egg

--- a/index.html
+++ b/index.html
@@ -26,10 +26,15 @@
     <link rel="stylesheet" href="Styles.css" />
   </head>
   <body>
+    <!-- check we have ES6 support -->
     <script src="Library/ES6Detect.js"></script>
+    <!-- libraries -->
     <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/3.8.0/math.min.js"></script>
     <script src="Library/LibSuperMaths.js"></script>
+    <!-- main script -->
     <script src="Main.js"></script>
+    <!-- this is totally necessary -->
+    <script src="Library/KonamiCode.js"></script>
   </body>
 </html>
