Attempt at responsive design

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <title>SuperMaths</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bungee|Roboto:400,700|Roboto+Slab" />
     <link rel="stylesheet" href="Styles.css" />
+    <meta name="viewport" content="width=450, initial-scale=1" />
   </head>
   <body>
     <!-- check we have ES6 support -->
